[project]
name = "lc-simulator"
version = "0.1.0"
description = "Local Python-only LeetCode Hot 100 CLI simulator"
requires-python = ">=3.9"

[project.scripts]
lc = "lc.cli:main"

[tool.setuptools]
packages = ["lc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
